# AI_testing_2025

./: LICENSE  README.md  advance_concept_python_copy_by_tahmoor.ipynb
01_day/uv_package/: pyproject.toml
01_day/uv_package/src/nescom/: __init__.py  hello.py
01_day/uv_package/tests/: test_hello.py
02_day/python/: Decorator_update_advance_concept_python.ipynb  advance_concept_python.ipynb
